# rust-ai-playground

./: .gitignore  README.md  build-with-rig-guides.txt  docker-compose.yml
agentic-rag-rust-qdrant/: Cargo.toml
agentic-rag-rust-qdrant/src/: agent.rs  file.rs  main.rs
ai-memory-cli/: Cargo.toml
ai-memory-cli/src/: db.rs  main.rs  memory.rs  summarize.rs
arxiv-rig-rust/: Cargo.toml
arxiv-rig-rust-shuttle/: Cargo.toml
arxiv-rig-rust-shuttle/src/: arxiv_parser.rs  arxiv_search_tool.rs  main.rs  routes.rs  util.rs
arxiv-rig-rust-shuttle/static/: index.html
arxiv-rig-rust/src/: arxiv_search_tool.rs  error.rs  main.rs  model.rs  routes.rs
arxiv-rig-rust/static/: index.html  table.html
flight_search_assistant/: Cargo.toml
flight_search_assistant/src/: flight_search_tool.rs  main.rs
hotel_search_assistant/: Cargo.toml
hotel_search_assistant/src/: hotel_search_tool.rs  location_search.rs  location_search_tool.rs  main.rs  model.rs  utils.rs
semantic-router/: Cargo.toml
semantic-router/src/: main.rs  semantic_router.rs  topics.rs
text_classifier/: Cargo.toml
text_classifier/src/: main.rs  model.rs
