[package]
name = "agentic-rag-rust-qdrant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.28.3"
qdrant-client = "1.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15.0"
axum = "0.8.4"
tracing = "0.1.41"
unicode-segmentation = "1.12.0"
csv_log_cleaner = "0.2.1"
validator = "0.20.0"
