[package]
name = "arxiv-rig-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.1"
quick-xml = { version = "0.37.5", features = ["serialize"] }
reqwest = "0.12.20"
rig-core = "0.13.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shuttle-axum = "0.55.0"
shuttle-runtime = "0.55.0"
thiserror = "2.0.12"
tokio = "1.28.2"
tracing = "0.1.41"
urlencoding = "2.1.3"
tera = "1.20.0"
tower-http = { version = "0.6.6", features = ["cors"] }

