[package]
name = "flight_search_assistant"
version = "0.1.0"
edition = "2024"

#rig-core: The core Rig library.
#tokio: Asynchronous runtime for Rust. Think of it as the engine that allows us to perform tasks concurrently.
#serde & serde_json: Libraries for serializing and deserializing data (converting between Rust structs and JSON).
#reqwest: An HTTP client for making API requests.
#dotenv: Loads environment variables from a .env file.
#thiserror: A library for better error handling.
#chrono: For handling dates and times.

[dependencies]
rig-core = "0.13.0"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.20", features = ["json"] }
dotenv = "0.15.0"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }