[package]
name = "hotel_search_assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.13.0"
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.20", features = ["json"] }
dotenv = "0.15.0"
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
