[package]
name = "semantic-router"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.13.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
qdrant-client = "1.14.0"
rig-qdrant = "0.1.14"
dotenv = "0.15.0"
serde_json = "1.0.140"
tokio = "1.45.1"
